@@ -27,7 +27,7 @@ def create_or_leave(directory: str):
         os.makedirs(directory)
 
 
-a = str(input("MDK configurator: (1) update target version: ")).lower()
+a = str(input("MDK configurator: (1) update target version, (2) update API information: ")).lower()
 
 
 if a == "1":
@@ -69,6 +69,31 @@ if a == "1":
 
     print("installing libraries...")
     subprocess.call([sys.executable, local + "/cache/core/installer.py"], stdin=sys.stdin, stdout=sys.stdout, stderr=sys.stderr)
+elif a == "2":
+    if os.path.exists(local+"/api.json"):
+        with open(local+"/api.json") as f:
+            data = json.load(f)
+    else:
+        data = {}
+    b = input("Would you like to (1) create an new API package, (2) remove an existing api package, (3) get the status of the API system").lower()
+    if b == "1":
+        name = input("Please enter the name of the api folder: ")
+        data[name] = {"path": local+"/api/{}".format(name), "source": input("Is part of your mod (y/n)? ").lower() == "y"}
+        if not os.path.exists(local+"/api/{}".format(name)): os.makedirs(local+"/api/{}".format(name))
+    elif b == "2":
+        name = input("Please enter the name of the api folder: ")
+        if name not in data:
+            raise ValueError("name not found!")
+        del data[name]
+    elif b == "3":
+        if len(data) == 0: sys.exit(-1)
+        print("the following api's are registered")
+        for name in data:
+            print(" - '{}' under '{}' (source: )".format(name, data[name]["path"], str(data[name]["source"]).lower()))
+    else:
+        raise ValueError("invalid answer!")
+    with open(local + "/api.json", mode="w") as f:
+        json.dump(data, f)
 else:
     raise ValueError("invalid answer")
 
